--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Alura Viagens</string>
+
+    <string name="especiais">Especiais</string>
+    <string name="brasil">Brasil</string>
 </resources>
