--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 
     <string name="especiais">Especiais</string>
     <string name="brasil">Brasil</string>
+    <string name="banner_inicial_dos_pacotes">Banner inicial dos pacotes</string>
 </resources>
