--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="pre_o_final">Preço final:</string>
     <string name="realizar_pagamentos">Realizar pagamento</string>
     <string name="imagem_do_pacote">Imagem do Pacote</string>
+    <string name="preco_final">Preço Final</string>
+    <string name="imagem_do_pacote_cD">Imagem do pacote</string>
 </resources>
