--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="especiais">Especiais</string>
     <string name="brasil">Brasil</string>
-    <string name="banner_inicial_dos_pacotes">Banner inicial dos pacotes</string>
+    <string name="banner_inicial">Banner inicial</string>
     <string name="title_activity_resumo_pacote">ResumoPacoteActivity</string>
     <string name="resumo_dos_pacotes">Resumo dos pacotes</string>
     <string name="realizar_pagamento">Realizar Pagamento</string>
@@ -20,4 +20,7 @@
     <string name="nome_no_cartao">Nome no cartão</string>
     <string name="finalizar_compra">Finalizar Compra</string>
     <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
+    <string name="parabens">Parabéns !</string>
+    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso</string>
+    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
 </resources>
