--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="parabens">Parabéns !</string>
     <string name="compra_realizada_com_sucesso">Compra realizada com sucesso</string>
     <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
+    <string name="splash_screen">Splash Screen</string>
+    <string name="minhas_viagens">Minhas Viagens</string>
 </resources>
